Added RSVPs back to the app.
